<resources>
    <string name="app_name">Trial</string>
    <string name="action_settings">Settings</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="skip">跳过(%1$d)</string>
    <string name="skip1">跳过</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="request">request</string>
</resources>
